--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -183,12 +183,16 @@ $tech-hashnode: #2962FF;
 $tech-linux: #FCC624;
 
 // Newly added category & analytics/tool colors
-$tech-design-systems: #967BB6;
+$tech-design-systems: #6366F1;
 $tech-google-analytics: #A50E0E;
 $tech-gtm: #0D652D;
 $tech-ab-testing: #4285F4;
 $tech-seo: #FBBC04;
 $tech-responsive-design: #E37400;
+$tech-vite: #646CFF;
+$tech-material-ui: #007FFF;
+$tech-wcag: #059669;
+$tech-performance: #7C3AED;
 
 // ============================================================
 // SHADOW TOKENS
